static/style.css
*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
body{background:#f5f5f5;}

.navbar{display:flex;justify-content:space-between;align-items:center;padding:12px 20px;background:#111;color:white;flex-wrap:wrap;}
.logo-box{display:flex;align-items:center;gap:10px;}
.logo{width:50px;height:50px;border-radius:50%;object-fit:cover;}
.whatsapp-btn{background:#25D366;color:white;padding:8px 16px;text-decoration:none;border-radius:20px;font-weight:bold;}

.hero{text-align:center;padding:80px 20px;background:linear-gradient(135deg,#2c2c2c,#000);color:white;}
.btn{display:inline-block;margin-top:15px;padding:12px 28px;background:silver;color:black;text-decoration:none;border-radius:25px;font-weight:bold;}

.products{padding:50px 20px;text-align:center;}
.product-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:25px;margin-top:30px;}
.card{background:white;padding:15px;border-radius:15px;box-shadow:0 8px 20px rgba(0,0,0,0.1);transition:0.3s;}
.card:hover{transform:translateY(-8px);}
.card img{width:100%;border-radius:10px;}

.map{padding:50px 20px;text-align:center;}

.float-whatsapp{position:fixed;bottom:20px;right:20px;background:#25D366;color:white;font-size:26px;padding:14px 16px;border-radius:50%;text-decoration:none;box-shadow:0 5px 15px rgba(0,0,0,0.3);}

footer{background:#111;color:white;text-align:center;padding:15px;}

@media(max-width:600px){.hero{padding:60px 15px;}}
.nav-actions{
display:flex;
align-items:center;
gap:12px;
}

.insta-btn{
background: linear-gradient(45deg,#f58529,#dd2a7b,#8134af,#515bd4);
color:white;
padding:8px 16px;
text-decoration:none;
border-radius:20px;
font-weight:bold;
display:flex;
align-items:center;
gap:6px;
}

.insta-btn:hover{
opacity:0.9;
}
@media(max-width:600px){

.navbar{
flex-direction:column;
gap:10px;
}

.nav-actions{
width:100%;
justify-content:center;
}

.hero h1{
font-size:28px;
}

.rate-box{
width:90%;
}

}

